--- a/src/index.html
+++ b/src/index.html
@@ -3,21 +3,21 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Knowgod</title>
+  <title>Know God</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- <link href="assets/css/style.css" rel=stylesheet /> -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous">
-  <link rel="stylesheet" href="/assets/style.css">
+  <link rel="stylesheet" type="text/css" href="http://acmesoftware.esy.es/assets/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
-  <script src="assets/js/base.js"></script>
-  <script src="assets/js/bootstrap.js"></script>
-  <script src="assets/js/main.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>  -->
+  <script type="application/javascript" src="http://acmesoftware.esy.es/assets/js/base.js"></script>
+  <script type="application/javascript" src="http://acmesoftware.esy.es/assets/js/bootstrap.js"></script>
+  <script type="application/javascript" src="main.js"></script>
  
 </head>
 
