--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,9 @@
   <script type="application/javascript" src="http://acmesoftware.esy.es/assets/js/base.js"></script>
   <script type="application/javascript" src="http://acmesoftware.esy.es/assets/js/bootstrap.js"></script>
   <script type="application/javascript" src="main.js"></script>
- 
+  <script>
+  history.pushState({}, "entry page", location.hash.substring(1));
+</script>
 </head>
 
 <body class="en en_index booklet-none locale-en">
