--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
   <script type="application/javascript" src="main.js"></script>
 
   <script>
-    //history.pushState({}, "entry page", location.hash.substring(1));
+    history.pushState({}, "entry page", location.hash.substring(1));
  
     window.addEventListener('popstate', function (e) {
       // The popstate event is fired each time when the current history entry changes.
