add analytics page bottom script

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,8 @@
 <body class="en en_index booklet-none locale-en">
   <input type="hidden" id="prevURL" />
   <app-root></app-root>
+
+  <script>if(window._satellite){ _satellite.pageBottom(); }</script>
 </body>
 
 </html>
