--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,20 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title>Know God</title>
   <base href="/">
+  <title>Know God</title>
+  <meta charset="utf-8">
+  <meta name="description" content="Learn more about how to know God personally">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Know God" />
+  <meta property="og:description" content="Learn more about how to know God personally" />
+  <meta property="og:image" content="https://knowgod.com/assets/img/icon.png" />
+  <link rel="icon" href="/assets/img/icon.png" />
 
   <script id="adobeLaunch"></script>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="assets/style.css" rel=stylesheet />
   <link href="assets/css/toastr.css" rel=stylesheet />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
