--- a/src/index.html
+++ b/src/index.html
@@ -17,13 +17,15 @@
   <script id="adobeLaunch"></script>
 
   <script>
-    history.pushState({}, 'entry page', location.hash.substring(1));
+    if ( window.location !== window.parent.location ) {
+      history.pushState({}, 'entry page', location.hash.substring(1));
 
-    window.addEventListener('popstate', function (e) {
-      e.preventDefault();
-      e.stopPropagation();
-      e.stopImmediatePropagation();
-    }, false);
+      window.addEventListener('popstate', function (e) {
+        e.preventDefault();
+        e.stopPropagation();
+        e.stopImmediatePropagation();
+      }, false);
+    }
   </script>
 </head>
 
