--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
   <script id="adobeLaunch"></script>
 
   <script>
+    // a condition which checks if the page is embedded in an iframe
     if ( window.location !== window.parent.location ) {
       history.pushState({}, 'entry page', location.hash.substring(1));
 
