--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
   <script>
     // a condition which checks if the page is embedded in an iframe
     if ( window.location !== window.parent.location ) {
+      window.isEmbedded = true;
       history.pushState({}, 'entry page', location.hash.substring(1));
 
       window.addEventListener('popstate', function (e) {
