--- a/src/index.html
+++ b/src/index.html
@@ -1,61 +1,82 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <base href="/" />
+    <title>Know God</title>
+    <meta charset="utf-8" />
+    <meta
+      name="description"
+      content="Learn more about how to know God personally"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<head>
-  <base href="/">
-  <title>Know God</title>
-  <meta charset="utf-8">
-  <meta name="description" content="Learn more about how to know God personally">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Know God" />
+    <meta
+      property="og:description"
+      content="Learn more about how to know God personally"
+    />
+    <meta
+      property="og:image"
+      content="https://knowgod.com/assets/img/icon.png"
+    />
+    <link rel="icon" href="/assets/img/icon.png" />
 
-  <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="Know God" />
-  <meta property="og:description" content="Learn more about how to know God personally" />
-  <meta property="og:image" content="https://knowgod.com/assets/img/icon.png" />
-  <link rel="icon" href="/assets/img/icon.png" />
+    <script id="adobeLaunch"></script>
 
-  <script id="adobeLaunch"></script>
+    <script>
+      // a condition which checks if the page is embedded in an iframe
+      if (window.location !== window.parent.location) {
+        window.isEmbedded = true;
+        history.pushState({}, 'entry page', location.hash.substring(1));
 
-  <script>
-    // a condition which checks if the page is embedded in an iframe
-    if ( window.location !== window.parent.location ) {
-      window.isEmbedded = true;
-      history.pushState({}, 'entry page', location.hash.substring(1));
+        window.addEventListener(
+          'popstate',
+          function(e) {
+            e.preventDefault();
+            e.stopPropagation();
+            e.stopImmediatePropagation();
+          },
+          false,
+        );
+      }
+    </script>
+  </head>
 
-      window.addEventListener('popstate', function (e) {
-        e.preventDefault();
-        e.stopPropagation();
-        e.stopImmediatePropagation();
-      }, false);
-    }
-  </script>
-</head>
+  <body class="en en_index booklet-none locale-en">
+    <app-root></app-root>
 
-<body class="en en_index booklet-none locale-en">
-  <app-root></app-root>
+    <script>
+      if (window._satellite) {
+        _satellite.pageBottom();
+      }
+    </script>
 
-  <script>if(window._satellite){ _satellite.pageBottom(); }</script>
+    <script>
+      //send iframe height to parent
+      (function() {
+        if (!parent.postMessage) {
+          return;
+        }
 
-  <script>
-    //send iframe height to parent
-    (function(){
-      if(!parent.postMessage) { return; }
+        var docBody = document.body;
+        var sendHeight = function() {
+          parent.postMessage(docBody.offsetHeight, '*');
+        };
+        var observer = new MutationObserver(function() {
+          sendHeight();
 
-      var docBody = document.body;
-      var sendHeight = function() {
-        parent.postMessage(docBody.offsetHeight, '*');
-      };
-      var observer = new MutationObserver(function(){
-        sendHeight();
-
-        //give time for images to load
-        setTimeout(sendHeight, 500);
-        setTimeout(sendHeight, 1000);
-        setTimeout(sendHeight, 2000);
-      });
-      observer.observe(docBody, { childList: true, subtree: true, characterData: true });
-    })();
-  </script>
-</body>
-
+          //give time for images to load
+          setTimeout(sendHeight, 500);
+          setTimeout(sendHeight, 1000);
+          setTimeout(sendHeight, 2000);
+        });
+        observer.observe(docBody, {
+          childList: true,
+          subtree: true,
+          characterData: true,
+        });
+      })();
+    </script>
+  </body>
 </html>
