Remove trailing commas since they are not supported on older browsers

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
             e.stopPropagation();
             e.stopImmediatePropagation();
           },
-          false,
+          false
         );
       }
     </script>
@@ -74,7 +74,7 @@
         observer.observe(docBody, {
           childList: true,
           subtree: true,
-          characterData: true,
+          characterData: true
         });
       })();
     </script>
