Fix embed.html HTML errors

--- a/embed/example.html
+++ b/embed/example.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <style>
@@ -17,6 +18,7 @@
         background-color: white;
       }
     </style>
+    <title>KnowGod.com Example Embed</title>
   </head>
   <body>
     <div class="test_container">
