GT-983: Add GTM page view events

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
       })(window, document, 'script', 'dataLayer', 'GTM-M2FKJRN');
     </script>
     <!-- End Google Tag Manager -->
+
     <base href="/" />
     <title>Know God</title>
     <meta charset="utf-8" />
@@ -61,6 +62,17 @@
   </head>
 
   <body class="en en_index booklet-none locale-en">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-M2FKJRN"
+        height="0"
+        width="0"
+        style="display:none;visibility:hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <app-root></app-root>
 
     <script>
