Making edit for testing server upload

--- a/embed/example.html
+++ b/embed/example.html
@@ -17,6 +17,9 @@
         width: 900px;
         background-color: white;
       }
+      .jptest {
+        color: white;
+      }
     </style>
     <title>KnowGod.com Example Embed</title>
   </head>
