Testing publish to staging

--- a/embed/example.html
+++ b/embed/example.html
@@ -17,6 +17,10 @@
         width: 900px;
         background-color: white;
       }
+
+      .howdy {
+        color: white;
+      }
     </style>
     <title>KnowGod.com Example Embed</title>
   </head>
