--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
         w[l] = w[l] || [];
         w[l].push({
           'gtm.start': new Date().getTime(),
-          event: 'gtm.js'
+          event: 'gtm.js',
         });
         var f = d.getElementsByTagName(s)[0],
           j = d.createElement(s),
@@ -53,7 +53,7 @@
             e.stopPropagation();
             e.stopImmediatePropagation();
           },
-          false
+          false,
         );
       }
     </script>
@@ -95,7 +95,7 @@
         observer.observe(docBody, {
           childList: true,
           subtree: true,
-          characterData: true
+          characterData: true,
         });
       })();
     </script>
