Add ministry and referrer tracking for embedded content

--- a/embed/example.html
+++ b/embed/example.html
@@ -22,7 +22,12 @@
   </head>
   <body>
     <div class="test_container">
-      <div id="knowGodEmbed" data-book="kgp-us" data-lang="en"></div>
+      <div
+        id="knowGodEmbed"
+        data-book="kgp-us"
+        data-lang="en"
+        data-ministry="example-ministry"
+      ></div>
       <script src="embed.js" type="text/javascript"></script>
     </div>
   </body>
